--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Flying Kraken</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style>
         canvas {
@@ -10,6 +11,7 @@
     </style>
 </head>
 <body onload="startGame()">
+<h1>Flying Kraken</h1>
 <script>
 
     var myGamePiece;
@@ -147,7 +149,9 @@
 <br>
 <button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">ACCELERATE</button>
 <p>Use the ACCELERATE button to stay in the air</p>
-<p>How long can you stay alive?</p>
-<p>Source Code is https://github.com/gochist/release-kraken</p>
+<p>How long can the Kraken stay alive?</p>
+<li><a href="https://github.com/gochist/release-kraken">This code </a>is a fork of
+    <a href="https://www.w3schools.com/graphics/tryit.asp?filename=trygame_default_gravity">w3school example code</a>.</li>
+<li><a href="https://thenounproject.com/term/kraken/337531/">Kraken Icon by Mat Rutherford, AU</a></li>
 </body>
 </html>
